<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogMarkerInfo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="horizontal">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etMarkerOrderNumber"
        android:hint="@string/marker_order_number"
        android:inputType="number" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etMarkerTitle"
        android:hint="@string/marker_title"
        android:layout_below="@+id/etMarkerOrderNumber"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etMarkerGroupName"
        android:inputType="text"
        android:hint="@string/marker_group_name"
        android:layout_below="@+id/etMarkerTitle"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etMarkerNavigatorNumber"
        android:hint="@string/marker_navigator_number"
        android:inputType="number"
        android:layout_below="@+id/etMarkerGroupName"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_marker_info_send"
        android:text="@string/marker_info_add"
        android:layout_below="@+id/etMarkerNavigatorNumber"/>
</RelativeLayout>