<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_login"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".ui.activities.userCabinet.LoginActivity">

    <ImageView
        android:id="@+id/fbIcon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/firebase_16_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/firebase_logo" />

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/fbIcon"
        android:id="@+id/login_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_email"
            android:hint="@string/enter_email_et"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/login_input_email"
        android:id="@+id/login_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/login_password"
            android:hint="@string/enter_pass_et"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_below="@+id/login_input_password"
        android:text="@string/login_btn"
        android:background="#263238"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/login_btn_forgot_password"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimaryDark"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/login_layout_or"
        android:layout_below="@+id/login_btn_forgot_password"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#c4c8c9"
            android:layout_margin="5dp"/>
        <TextView
            android:padding="5dp"
            android:text="@string/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#c4c8c9"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/login_btn_signUp"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimaryDark"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@+id/login_layout_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>