<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activities.userCabinet.SignUp">

    <ImageView
        android:id="@+id/icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/firebase_16_logo"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/icon"
        android:id="@+id/signup_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/signup_email"
            android:hint="@string/enter_email_et"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/signup_input_email"
        android:id="@+id/signup_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/signup_password"
            android:hint="@string/enter_pass_et"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_below="@+id/signup_input_password"
        android:id="@+id/signup_btn_register"
        android:text="@string/sign_up"
        android:background="#263238"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_below="@+id/signup_btn_register"
        android:id="@+id/signup_btn_forgot_pass"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimaryDark"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/signup_layout_or"
        android:layout_below="@+id/signup_btn_forgot_pass"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#c4c8c9"
            android:layout_margin="5dp"/>
        <TextView
            android:padding="5dp"
            android:text="@string/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#c4c8c9"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/signup_btn_login"
        android:layout_below="@+id/signup_layout_or"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/already_registered"
        android:textColor="@color/colorPrimaryDark"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
