<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.hc_06.yj.bluetoothapplication.ui.activities.FavoritesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="3dp"
        android:background="@color/desert_storm">
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="50dp"/>
        <TextView android:id="@+id/tvOrderNumber"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="10dp"
            android:text="@string/marker_order_number"/>
        <TextView android:id="@+id/tvName"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_toRightOf="@id/tvOrderNumber"
            android:text="@string/marker_title"/>
        <TextView android:id="@+id/tvGroupName"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_toRightOf="@id/tvName"
            android:text="@string/marker_group_name"/>
        <TextView android:id="@+id/tvNaviNumber"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_toRightOf="@id/tvGroupName"
            android:text="@string/marker_navigator_number"/>

        <View android:id="@+id/divider"
            android:layout_below="@+id/tvNaviNumber"
            android:layout_width="350dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_centerHorizontal="true"
            android:layout_height="1dp"
            android:background="#c4c8c9"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/favList"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/divider"
            app:layoutManager="LinearLayoutManager"
            tools:context="com.hc_06.yj.bluetoothapplication.ui.activities.FavoritesActivity" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <TextView
                android:id="@+id/empty_view_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                android:text="@string/no_items" />
            <Button
                android:id="@+id/empty_view_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/empty_view_tv"
                android:padding="15dp"
                android:visibility="gone"
                android:text="@string/move_to_list_btn"/>
        </RelativeLayout>
        <Button android:id="@+id/sendCoordinates"
            android:layout_below="@id/favList"
            android:layout_centerHorizontal="true"
            android:text="Подтвердить координаты"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:onClick="onSendValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>